Issue #92 #105 : make a shared video player component. Fix poster not showing and timeline

--- a/src/app/pages/player/contents/video/video.component.scss
+++ b/src/app/pages/player/contents/video/video.component.scss
@@ -15,124 +15,6 @@
   }
 }
 
-.video-player{
-  .video-container{
-    position: relative;
-
-    &:before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: calc(100% - 40px);
-      cursor: pointer;
-      background: transparent;
-      z-index: 1;
-    }
-
-    &:after {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 0;
-      height: 74px;
-      cursor: pointer;
-      background: transparent;
-      box-sizing: border-box;
-      border: 0 solid transparent;
-      border-color: transparent transparent transparent rgba(32, 32, 32, 0.7);
-      border-style: solid;
-      border-width: 37px 0 37px 60px;
-      transform: translate(-50%, -50%);
-      transition: 100ms all ease;
-    }
-
-    &.playing {
-      &:after {
-        border-style: double;
-        border-width: 0px 0 0px 60px;
-        animation: fadeOut .5s forwards;
-        animation-delay: .5s;
-      }
-    }
-
-    @keyframes fadeOut {
-      from {
-        opacity: 1;
-      }
-      to {
-        opacity: 0;
-      }
-    }
-  }
-
-  video{
-    display: block;
-    width: 100%;
-    height: auto;
-    margin:0;
-    background:none;
-
-    &:not(:fullscreen)::-webkit-media-controls-overlay-play-button,
-    &::-webkit-media-controls-play-button,
-    &::-webkit-media-controls-toggle-closed-captions-button,
-    &::-webkit-media-controls-volume-slider,
-    &::-webkit-media-controls-mute-button,
-    &:not(:fullscreen)::-webkit-media-controls-fullscreen-button{
-      display: none!important;
-    }
-  }
-
-  .hidden-select{
-    display: none;
-  }
-
-  .video-actions{
-    display: flex;
-    font-size: 25px;
-    justify-content: space-between;
-    padding: 10px 16px;
-    &-left{
-      width: 30%;
-      text-align: left;
-
-      ion-icon{
-        margin-right: 5px;
-      }
-    }
-    &-center{
-      width: 40%;
-      text-align: center;
-
-      ion-icon{
-        margin: 0 5px;
-      }
-    }
-    &-right{
-      width: 30%;
-      text-align: right;
-
-      ion-icon{
-        margin-left: 5px;
-      }
-    }
-
-    ion-icon{
-      display: inline-block;
-      padding: 2px 5px;
-      border-radius: 5px;
-      background: $inria-bg;
-
-      &:active, &:focus{
-        color:white;
-        background: $inria-blue;
-      }
-    }
-  }
-}
-
 .video-summary{
   overflow: auto;
   flex-grow:1;
